# src/server/index.ts
@@ -2,6 +2,7 @@ import { OpenAPIHono } from "@hono/zod-openapi";
 import { todoRouter } from "./infrastructure/http/todos";
 import { requestLogger } from "./infrastructure/http/middleware/logger";
 import { errorHandler } from "./infrastructure/http/middleware/error-handler";
+import { healthRouter } from "./infrastructure/http/health/health.routes";
 
 export const appRouter = new OpenAPIHono().basePath("/api/v1");
 
@@ -21,3 +22,4 @@ appRouter.notFound((c) => {
 });
 
 appRouter.route("/todos", todoRouter);
+appRouter.route("/health", healthRouter);
